# django-settings-env

./: .envrc  .gitignore  README.md  README.rst  pyproject.toml  setup.py
django_env/: __init__.py  dot_env.py  env_django.py  env_wrapper.py
tests/: test_django_wrapper.py  test_load_env.py  test_wrapper.py
